# tumunu-brains

./: .gitignore  Cargo.toml  DEPLOYMENT_SUMMARY.md  README.md
brains-cli/: Cargo.toml
brains-cli/src/: main.rs
brains-core/: Cargo.toml
brains-core/src/: fs_scanner.rs  governance.rs  lib.rs  orchestrator.rs  plugin.rs  registry.rs  system_metrics.rs  versioning.rs
brains-correlation/: Cargo.toml
brains-correlation/src/: lib.rs
brains-detection/: Cargo.toml
brains-detection/src/: lib.rs
brains-forensics/: Cargo.toml  build.rs
brains-forensics/src/: ast_pattern_analyzer.rs  lib.rs
brains-memory/: Cargo.toml
brains-memory/src/: lib.rs
brains-ontology/: Cargo.toml
brains-ontology/src/: lib.rs
brains-provenance/: Cargo.toml
brains-provenance/src/: lib.rs
brains-reports/: Cargo.toml
brains-reports/src/: chain_of_custody.rs  lib.rs  report_schema.rs  signature.rs  templates.rs  validation.rs
brains-reports/templates/: executive_summary.md
docs/: architecture.md  deployment.md  developer-guide.md  user-guide.md
