[workspace]
members = [
    "brains-core",
    "brains-ontology", 
    "brains-detection",
    "brains-forensics",
    "brains-provenance",
    "brains-correlation",
    "brains-reports",
    "brains-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tumunu Research Team"]
license = "Apache-2.0"
repository = "https://github.com/tumunu/research/brains"
description = "Tumunu Brains: Forensic intelligence platform for code analysis"
keywords = ["forensics", "llm-detection", "security", "research", "pattern-analysis"]
categories = ["science", "development-tools"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"

# AST and parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"

# CLI
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.0"
criterion = "0.5"