[package]
name = "brains-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for forensic analysis"

[[bin]]
name = "brains"
path = "src/main.rs"

[dependencies]
brains-ontology = { path = "../brains-ontology" }
brains-detection = { path = "../brains-detection" }
brains-forensics = { path = "../brains-forensics" }
brains-provenance = { path = "../brains-provenance" }
brains-memory = { path = "../brains-memory" }
brains-reports = { path = "../brains-reports" }
brains-core = { path = "../brains-core" }
nix = "0.27"
rand = "0.8"
ed25519-dalek = "2.0"
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
anyhow.workspace = true
console.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
md5 = "0.7"
tabled = { version = "0.11", features = ["derive"] }
rustyline = { version = "12.0", features = ["with-file-history"] }
sysinfo = "0.29"

[dev-dependencies]
proptest.workspace = true