[package]
name = "brains-detection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Detection trait system for forensic pattern analysis"

[dependencies]
brains-ontology = { path = "../brains-ontology" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
md5 = "0.7"

[dev-dependencies]
proptest.workspace = true