[package]
name = "brains-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Memory storage and retrieval for forensic analysis"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }