[package]
name = "brains-ontology"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ontology-driven pattern detection for forensic intelligence"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true