[package]
name = "brains-reports"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Signed forensic reports with cryptographic chain of custody"

[dependencies]
brains-core = { path = "../brains-core" }
brains-ontology = { path = "../brains-ontology" }
brains-detection = { path = "../brains-detection" }
brains-forensics = { path = "../brains-forensics" }
brains-provenance = { path = "../brains-provenance" }
brains-correlation = { path = "../brains-correlation" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3.0"
